--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ Temporary Items
 !/modules/MMM-EmotionWeather/**
 !/modules/MMM-Date/**
 !/modules/MMM-Location/**
+!/modules/MMM-Sunrise/**
 
 # Ignore changes to the custom css files but keep the sample and main.
 /css/*
