--- a/.gitignore
+++ b/.gitignore
@@ -64,10 +64,13 @@ Temporary Items
 !/modules/MMM-Date/**
 !/modules/MMM-Location/**
 !/modules/MMM-Sunrise/**
+!/modules/backgrounds/**
+!/modules/backgrounds/test.mp4
 
 # Ignore changes to the custom css files but keep the sample and main.
 /css/*
 !/css/custom.css.sample
+!/css/custom.css
 !/css/main.css
 !/css/roboto.css
 !/css/font-awesome.css
