--- a/.gitignore
+++ b/.gitignore
@@ -60,17 +60,10 @@ Temporary Items
 
 
 # Ignore changes to the custom css files but keep the sample and main.
-/css/*
-!/css/custom.css.sample
-!/css/custom.css
-!/css/main.css
-!/css/roboto.css
-!/css/font-awesome.css
+#/css/*
 
 # Ignore users config file but keep the sample.
-/config/*
-!/config/config.js
-!/config/config.js.sample
+#/config/*
 
 # Vim
 ## swap
