--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"node-ical": "^0.20.1",
 		"nunjucks": "^3.2.4",
 		"pm2": "^6.0.8",
+		"serialport": "^13.0.0",
 		"socket.io": "^4.8.1",
 		"suncalc": "^1.9.0",
 		"systeminformation": "^5.27.7",
