--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"moment-timezone": "^0.6.0",
 		"node-ical": "^0.20.1",
 		"nunjucks": "^3.2.4",
+		"package.json": "^2.0.1",
 		"pm2": "^6.0.8",
 		"serialport": "^13.0.0",
 		"socket.io": "^4.8.1",
